--- a/myinit.org
+++ b/myinit.org
@@ -125,7 +125,13 @@
 
   (use-package shut-up
   :ensure t)
-  
+
+  ;; Displays available keybindings in popup, see more https://github.com/justbur/emacs-which-key
+  (use-package which-key
+  :ensure t
+  :config
+  (which-key-mode +1))
+
 #+END_SRC 
 
 * theme and modeline
@@ -332,6 +338,35 @@ see more, https://github.com/Alexander-Miller/treemacs
       ("C-M-i" . ace-flyspell-correct-word)))
 #+END_SRC
 
+** ivy
+#+BEGIN_SRC emacs-lisp
+  (use-package ivy
+  :ensure t
+  :diminish (ivy-mode)
+  :bind (("C-x b" . ivy-switch-buffer))
+  :config
+  (ivy-mode 1)
+  (setq ivy-use-virtual-buffers t)
+  (setq ivy-count-format "%d/%d ")
+  (setq ivy-display-style 'fancy))
+
+  (use-package swiper
+  :after ivy
+  :ensure t
+  :bind (("C-s" . swiper-isearch)
+           ("C-r" . swiper-isearch)
+           ("C-c C-r" . ivy-resume)
+           ("M-x" . counsel-M-x)
+           ("C-x C-f" . counsel-find-file))
+  :config
+  (progn
+    (ivy-mode 1)
+    (setq ivy-use-virtual-buffers t)
+    (setq ivy-display-style 'fancy)
+    (define-key read-expression-map (kbd "C-r") 'counsel-expression-history)
+    ))
+#+END_SRC
+
 * editor
 ** undo
 #+BEGIN_SRC emacs-lisp
@@ -505,6 +540,48 @@ see more, https://magit.vc/
   (use-package miniedit
   :ensure t)
 #+END_SRC
+** company
+see more, http://company-mode.github.io/
+#+BEGIN_SRC emacs-lisp
+
+  (use-package company
+  :ensure t
+  :hook (emacs-lisp-mode . company-mode)
+  :config
+  (setq company-idle-delay 0)
+  (setq company-minimum-prefix-length 3)
+  (global-company-mode t))
+
+  (use-package company-prescient
+  :defer  
+  :ensure t
+  :after company
+  :config
+  (company-prescient-mode +1))
+
+  (use-package company-irony
+  :defer
+  :ensure t
+  :after comapny)
+
+  (use-package company-shell
+  :defer
+  :ensure t
+  :after comany)
+
+  (use-package company-c-headers
+  :defer
+  :after company
+  :ensure t)
+
+  (use-package company-emoji
+  :defer
+  :ensure t
+  :after company
+  :config
+  (add-to-list 'company-backends 'company-emoji))
+#+END_SRC
+
 * programming
 ** lsp
 #+BEGIN_SRC emacs-lisp
