--- a/myinit.org
+++ b/myinit.org
@@ -356,7 +356,7 @@ see more, https://github.com/Alexander-Miller/treemacs
   :bind (("C-s" . swiper-isearch)
            ("C-r" . swiper-isearch)
            ("C-c C-r" . ivy-resume)
-           ("M-x" . counsel-M-x)
+;;           ("M-x" . counsel-M-x)
            ("C-x C-f" . counsel-find-file))
   :config
   (progn
@@ -406,6 +406,7 @@ See more, https://www.flycheck.org/en/latest/
 
 ** yasnippet
 see more, https://github.com/joaotavora/yasnippet
+develop/config, https://joaotavora.github.io/yasnippet/snippet-development.html
 #+BEGIN_SRC emacs-lisp
   (setq-default abbrev-mode 1)
 
