--- a/myinit.org
+++ b/myinit.org
@@ -351,12 +351,8 @@ see more, https://github.com/Alexander-Miller/treemacs
   (setq ivy-display-style 'fancy))
 
   (use-package swiper
-  :after ivy
   :ensure t
   :bind (("C-s" . swiper-isearch)
-           ("C-r" . swiper-isearch)
-           ("C-c C-r" . ivy-resume)
-;;           ("M-x" . counsel-M-x)
            ("C-x C-f" . counsel-find-file))
   :config
   (progn
@@ -576,8 +572,9 @@ see more, https://magit.vc/
     ("C-x r i" . anzu-isearch-query-replace)     
     ("C-x r a" . anzu-query-replace))
   :config
-  (global-anzu-mode 1))
+  (global-anzu-mode +1))
 #+END_SRC
+
 ** prodigy
 #+BEGIN_SRC emacs-lisp
   (use-package prodigy
