--- a/myinit.org
+++ b/myinit.org
@@ -293,6 +293,28 @@ see more, https://github.com/Alexander-Miller/treemacs
   :hook (dired-mode . all-the-icons-dired-mode))
 #+END_SRC
 
+** dired sidebar
+see more,https://github.com/jojojames/dired-sidebar
+#+BEGIN_SRC emacs-lisp
+  (use-package dired-sidebar
+  :bind (("C-x C-n" . dired-sidebar-toggle-sidebar))
+  :ensure t
+  :commands (dired-sidebar-toggle-sidebar)
+  :init
+  (add-hook 'dired-sidebar-mode-hook
+            (lambda ()
+              (unless (file-remote-p default-directory)
+                (auto-revert-mode))))
+  :config
+  (push 'toggle-window-split dired-sidebar-toggle-hidden-commands)
+  (push 'rotate-windows dired-sidebar-toggle-hidden-commands)
+
+  (setq dired-sidebar-subtree-line-prefix "__")
+  (setq dired-sidebar-theme 'vscode)
+  (setq dired-sidebar-use-term-integration t)
+  (setq dired-sidebar-use-custom-font t))
+#+END_SRC
+
 ** vterm
 #+BEGIN_SRC emacs-lisp
   (use-package vterm
