fix(lsp): rm dap mode
Signed-off-by: wanglei <wanglei4687@gmail.com>

--- a/myinit.org
+++ b/myinit.org
@@ -429,20 +429,19 @@ See more, https://www.flycheck.org/en/latest/
 #+BEGIN_SRC emacs-lisp
   (use-package flycheck
   :ensure t
-  :init 
   :config
-  ;; Disable the error indicator on the fringe
+ ;; Disable the error indicator on the fringe
   (setq flycheck-indication-mode nil)
 
   ;; Disable automatic syntax check on new line
-  (setq flycheck-syntax-automatically '(save 
-  idle-change 
+  (setq flycheck-syntax-automatically '(save
+  idle-change
   mode-enable))
 
   ;; Immediate syntax checking quite annoying. Slow it down a bit.
   (setq flycheck-idle-change-delay 2.0)
 
-  ;; Customize faces (Colors are copied from solarized definitions
+  ;; Customize faces Colors are copied from solarized definitions
 
   (set-face-attribute 'flycheck-warning nil
   :background "#b58900"
@@ -452,9 +451,9 @@ See more, https://www.flycheck.org/en/latest/
   (set-face-attribute 'flycheck-error nil
   :background "dc322f"
   :foreground "#262626"
-  :underline nil)
+  :underline nil))
 
-  (global-flycheck-mode t))
+;  (global-flycheck-mode t))
 #+END_SRC
 
 ** yasnippet
@@ -861,17 +860,17 @@ but without opening a new window.
 
 ** tree sitter
 #+BEGIN_SRC emacs-lisp
-  (use-package tree-sitter
-  :ensure t
-  :hook (
-    (rust-mode . tree-sitter-mode)
-    (toml-mode . tree-sitter-mode)
-    (markdown-mode . tree-sitter-mode)
-    (go-mode . tree-sitter-mode)))
+;  (use-package tree-sitter
+;  :ensure t
+;  :hook (
+;    (rust-mode . tree-sitter-mode)
+;    (toml-mode . tree-sitter-mode)
+;    (markdown-mode . tree-sitter-mode)
+;    (go-mode . tree-sitter-mode)))
 
-  (use-package tree-sitter-langs
-  :defer
-  :ensure t)
+;  (use-package tree-sitter-langs
+;  :defer
+;  :ensure t)
 #+END_SRC
 
 ** rust
